# WaaG

./: .gitignore  CMakeLists.txt  L2_press.py  Makefile  Plot_fields.ipynb  README.md  analyze.ipynb  cmake.sh  cmake_install.cmake  create.cpp  data_kept.h  draw.cpp  draw_Ek.py  draw_grad_press.py  draw_log.py  draw_press.py  draw_press_LO.py  draw_ps.py  draw_s.py  draw_traj.py  draw_vect.py  draw_vel.py  draw_vel_LO.py  draw_vols.py  draw_w.py  fields.cpp  fields_enum.h  linear.h  linear_DD_scalar_prod.cpp  linear_add_grad_p.cpp  linear_aux.cpp  linear_fill_DD.cpp  linear_fill_Delta.cpp  linear_fill_Delta_DD.cpp  linear_p_equation.cpp  linear_p_equation_from_s.cpp  linear_s_equation.cpp  linear_solve_for_moments.cpp  linear_solve_for_weights.cpp  linear_solve_for_weights_centroid.cpp  (+58 more)
centroid_test/: CMakeLists.txt  centroid.cpp  cmake_install.cmake
periodic/: CMakeLists.txt  L2_press.py  cmake.sh  cp.sh  create.cpp  data_kept.h  draw.cpp  draw_Ek.py  draw_L2.py  fields.cpp  fields_enum.h  interpolate.cpp  linear.h  linear_DD_scalar_prod.cpp  linear_aux.cpp  linear_fill_Delta_DD.cpp  linear_p_equation.cpp  linear_solve_for_weights.cpp  linear_vect_to_field.cpp  lloyds.cpp  move.cpp  number.cpp  pParticles.h  pParticles_GM.cpp  pParticles_dG.cpp  pParticles_p.cpp  printout.h  sizes.py  snapshot.py  volumes.cpp  vrtx_info.h
